--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "attendance-managment-backend",
-  "version": "1.0.0",
-  "description": "attendance managment backend Nodejs/Express.js",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "lint": "eslint **/*.js --ignore-pattern internals/scripts --ignore-path .gitignore",
-    "lint:fix": "npm run lint --fix",
-    "lint:watch": "npm run lint --watch",
-    "validate": "npm run lint"
-  },
-  "author": "sahil sutariya",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "express-validator": "^6.14.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.6",
-    "nodemon": "^2.0.19",
-    "validator": "^13.7.0"
-  }
+    "name": "attendance-managment-backend",
+    "version": "1.0.0",
+    "description": "attendance managment backend Nodejs/Express.js",
+    "main": "index.js",
+    "engines": { "node": "16.x" },
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js",
+        "lint": "eslint **/*.js --ignore-pattern internals/scripts --ignore-path .gitignore",
+        "lint:fix": "npm run lint --fix",
+        "lint:watch": "npm run lint --watch",
+        "validate": "npm run lint"
+    },
+    "author": "sahil sutariya",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.20.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.2",
+        "express": "^4.18.1",
+        "express-validator": "^6.14.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.3.6",
+        "nodemon": "^2.0.19",
+        "validator": "^13.7.0"
+    }
 }
